# dsi443_2026

./: .gitignore  README.md  main.py  pyproject.toml
src/: analyzer.py  collector.py  config.py  prompts.yaml
