[project]
name = "my-world-eiei"
version = "0.1.0"
description = "I-love-minor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.187.0",
    "google-genai>=1.52.0",
    "ipykernel>=7.1.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "kernel>=0.20.0",
]
